--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -236,12 +236,6 @@ header nav a.activo {
   color: #FFF;
 }
 
-/*carrito*/
-.cart {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-}
 
 /* ---- ----- ----- Nosotros Principal ----- ----- ----- */
 .nosotros-principal {
@@ -357,7 +351,26 @@ main .sobre-nosotros {
   font-weight: 300;
   text-align: justify;
 }
-
+@media screen and (max-width: 768px){
+  .imagen-about-us{
+    float: none;
+    width: 100%;
+    display: block;
+    margin: auto;
+  }
+  .contenedor-sobre-nosotros{
+    float: none;
+    width: 100%;
+    display: block;
+    margin: auto;
+  }
+  .sobre-nosotros .contenido-textos{
+    float: none;
+    width: 100%;
+    display: block;
+    margin: auto;
+  }
+}
 /* Elements for Mi Cuenta page */
 /*ESTILOS GLOBALES*/
 *{
@@ -453,17 +466,14 @@ a {
 }
 
 .product-bg{
-  height: 40vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(contact-background.jpg);
-  background-position: 50% 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  text-align: center;
+  font-size: 16px;
+  min-height: 40.62em;
   color: #fff;
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("imagenes/pexels-cottonbro-4937453.jpg");
+  background-size: cover;
+  margin-bottom: 3.12em;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: end;
 }
 .product-bg h3{
   font-size: 1.3rem;
@@ -591,7 +601,16 @@ a {
     .clothes-filter .btn {
       margin-bottom: 20px;
   }
+/* ---- ----- ----- Media Queries ----- ----- ----- */
+@media screen and (max-width: 800px) { 
+  .product-bg {
+    font-size: 14px;
+  }
 
+  .nosotros-principal .descripcion {
+    max-width: 100%;
+  }
+}
   @media (min-width: 992px) {
 .clothes-filter {
   padding: 0 200px 50px 200px;
@@ -667,164 +686,98 @@ footer .subfooter .redes-sociales a:hover {
 /* Elements for Contacto page */
 /*ESTILO DE CONTACTO*/
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+body{
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.5;
+}
 .contact-bg{
-  height: 40vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(imagenes/contact-background.jpg);
-  background-position: 50% 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  text-align: center;
+  font-size: 16px;
+  min-height: 40.62em;
   color: #fff;
+  background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("imagenes/pexels-contact-background.jpg");
+  background-size: cover;
+  margin-bottom: 3.12em;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: end;
 }
 .contact-bg h3{
-  font-size: 1.3rem;
-  font-weight: 400;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 .contact-bg h2{
-  font-size: 3rem;
-  text-transform: uppercase;
-  padding: 0.4rem 0;
-  letter-spacing: 4px;
+    font-size: 3rem;
+    text-transform: uppercase;
+    padding: 0.4rem 0;
+    letter-spacing: 4px;
 }
 .line div{
-  margin: 0 0.2rem;
+    margin: 0 0.2rem;
 }
 .line div:nth-child(1),
 .line div:nth-child(3){
-  height: 3px;
-  width: 70px;
-  background: #f36100;
-  border-radius: 5px;
+    height: 3px;
+    width: 70px;
+    background: #f36100;
+    border-radius: 5px;
 }
 .line{
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 .line div:nth-child(2){
-  width: 10px;
-  height: 10px;
-  background: #f36100;
-  border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background: #f36100;
+    border-radius: 50%;
 }
 .text{
-  font-weight: 300;
-  opacity: 0.9;
+    font-weight: 300;
+    opacity: 0.9;
 }
 .contact-bg .text{
-  margin: 1.6rem 0;
+    margin: 1.6rem 0;
 }
 .contact-body{
-  max-width: 1320px;
-  margin: 0 auto;
-  padding: 0 1rem;
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 0 1rem;
 }
 .contact-info{
-  margin: 2rem 0;
-  text-align: center;
-  padding: 2rem 0;
+    margin: 2rem 0;
+    text-align: center;
+    padding: 2rem 0;
 }
 .contact-info span{
-  display: block;
+    display: block;
 }
 .contact-info div{
-  margin: 0.8rem 0;
-  padding: 1rem;
+    margin: 0.8rem 0;
+    padding: 1rem;
 }
 .contact-info span .fas{
-  font-size: 2rem;
-  padding-bottom: 0.9rem;
-  color: #f36100;
+    font-size: 2rem;
+    padding-bottom: 0.9rem;
+    color: #f36100;
 }
 .contact-info div span:nth-child(2){
-  font-weight: 500;
-  font-size: 1.1rem;
+    font-weight: 500;
+    font-size: 1.1rem;
 }
 .contact-info .text{
-  padding-top: 0.4rem;
+    padding-top: 0.4rem;
 }
-.contact-form{
-  padding: 2rem 0;
-  border-top: 1px solid #c7c7c7;
+.bg{
+  background-image: url(imagenes/undraw_contact_us_15o2.png);
+  background-position: center ;
+  width: 25;
 }
-.contact-form form{
-  padding-bottom: 1rem;
-}
-.form-control{
-  width: 100%;
-  border: 1.5px solid #c7c7c7;
-  border-radius: 5px;
-  padding: 0.7rem;
-  margin: 0.6rem 0;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
-  outline: 0;
-}
-.form-control:focus{
-  box-shadow: 0 0 6px -3px rgba(48, 48, 48, 1);
-}
-.contact-form form div{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 0.6rem;
-}
-.send-btn{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
-  text-transform: uppercase;
-  color: #fff;
-  background: #f36100;
-  border: none;
-  border-radius: 5px;
-  padding: 0.7rem 1.5rem;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-.send-btn:hover{
-  opacity: 0.8;
-}
-.contact-form > div img{
-  width: 85%;
-}
-.contact-form > div{
-  margin: 0 auto;
-  text-align: center;
-}
-.contact-footer{
-  padding: 2rem 0;
-  background: #000;
-}
-.contact-footer h3{
-  font-size: 1.3rem;
-  color: #fff;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-.social-links{
-  display: flex;
-  justify-content: center;
-}
-.social-links a{
-  text-decoration: none;
-  width: 40px;
-  height: 40px;
-  color: #fff;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0.4rem;
-  transition: all 0.4s ease;
-}
-.social-links a:hover{
-  color: #f36100;
-  border-color: #f36100;
-}
-
 @media screen and (min-width: 768px){
   .contact-bg .text{
       width: 70%;
@@ -834,73 +787,8 @@ footer .subfooter .redes-sociales a:hover {
   .contact-info{
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 992px){
-  .contact-bg .text{
-      width: 50%;
-  }
-  .contact-form{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      align-items: center;
-  }
-}
-
-@media screen and (min-width: 1200px){
-  .contact-info{
-      grid-template-columns: repeat(4, 1fr);
-  }
-}
-/* Elements for 404 page */
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-  }
-
-  body {
-	font-family: "Mate SC", serif;
-	font-weight: 400;
-  background-image: linear-gradient(blue violet)
-  }
-  .contenedor-error {
-	width: 90%;
-	display: flex;
-  } 
- 
-  @media (min-width: 1400px) {
-    .numeros {
-      left: 50%;
+      }
     }
   }
-  .numeros span {
-  font-size: 35rem;
-  color: rgb(0, 0, 0);
-  font-weight: 700;
-  text-shadow: black;
-  }
-
-  .boton-home {
-    top: 50rem;
-    left: 60rem;
-    padding: 1.2rem 3rem;
-    border-radius: 4rem;
-    border:1px solid white;
-    letter-spacing: normal;
-    background-color: rgb(148, 130, 130);
-    font-size: 2rem;
-    transition: all .3s ease-in;
-  }
-@media (min-width: 1400px) {
-  .boton-home {
-    left: 90rem;
-  }
-}
-.boton-home:hover {
-  background: blueviolet;
-  color: white;
- }
-  }
-  /*# sourceMappingURL=style.css.map *
+         
+/*# sourceMappingURL=style.css.map *
